--- a/Projeto/Merch_ISCTE/loja/templates/loja/criar_categoria.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/criar_categoria.html
@@ -5,15 +5,19 @@ Criar Categoria
 {% endblock %}
 
 {% block blocobody %}
-<form action="{% url 'loja:nova_categoria' %}" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <div class="form-group">
-        <label>Categoria</label>
-        <input class="form-control" id="categoria_nome" name="categoria_nome" required="required"
-               type="text">
-        <label>Imagem</label>
-        <input class="form-control" id="categoria_file" name="categoria_file" type="file">
-    </div>
-    <input class="btn btn-primary btn-block" type="submit" value="Criar">
-</form>
+<div class="container-md mx-auto my-5"><h1 class="text-center">Criar Categoria</h1></div>
+<div class="container-md m-5 w-50 mx-auto">
+    <form action="{% url 'loja:nova_categoria' %}" enctype="multipart/form-data" method="post">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="categoria_nome" class="form-label">Categoria</label>
+          <input type="text" class="form-control" id="categoria_nome" name="categoria_nome">
+        </div>
+          <div class="mb-3">
+            <label for="myfile" class="form-label">Inserir foto</label>
+            <input class="form-control" type="file" id="myfile">
+          </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+</div>
 {% endblock %}
