--- a/Projeto/Merch_ISCTE/loja/templates/loja/criar_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/criar_produto.html
@@ -5,7 +5,7 @@ Criar Produto
 {% endblock %}
 
 {% block blocobody %}
-<form action="{% url 'loja:novo_produto' categoria.id %}" method="post">
+<!-- <form action="{% url 'loja:novo_produto' categoria.id %}" method="post">
     {% csrf_token %}
     <div class="form-group">
         <label>Nome</label>
@@ -20,5 +20,28 @@ Criar Produto
         <input class="form-control" id="produto_file" name="produto_file" type="file">
     </div>
     <input class="btn btn-primary btn-block" type="submit" value="Criar">
-</form>
+</form> -->
+<div class="container-md mx-auto my-5"><h1 class="text-center">Criar Produto</h1></div>
+<div class="container-md m-5 w-50 mx-auto">
+    <form action="{% url 'loja:novo_produto' categoria.id %}" enctype="multipart/form-data" method="post">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="categoria_nome" class="form-label">Nome</label>
+          <input type="text" class="form-control" id="produto_nome" name="produto_nome" required="required">
+        </div>
+        <div class="mb-3">
+            <label for="categoria_nome" class="form-label">Descrição</label>
+            <input type="text" class="form-control" id="produto_texto" name="produto_texto" required="required">
+          </div>
+          <div class="mb-3">
+            <label for="preco_data" class="form-label">Descrição</label>
+            <input type="number" class="form-control" id="preco_data" name="preco_data" min="0.01" step="0.01" required="required">
+          </div>
+          <div class="mb-3">
+            <label for="myfile" class="form-label">Inserir imagem</label>
+            <input class="form-control" type="file" id="produto_file" required="required">
+          </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+</div>
 {% endblock %}
