--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link active" aria-current="page" href="{% url 'loja:index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'loja:index' %}">Produtos</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -194,10 +194,10 @@
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Iscte</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Fénix</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Moodle</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Sobre</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Merch@ISCTE, Inc</p>
     </footer>
