--- a/Projeto/Merch_ISCTE/loja/templates/loja/perfil.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/perfil.html
@@ -17,7 +17,7 @@ Perfil
     <div class="row d-flex justify-content-center ">Last Login: {{ request.user.last_login}}</div>
     <br>
     <div class="d-flex justify-content-center ">
-        <a href="{% url 'loja:editar_user' %}" class="btn ">Editar Utilizador</a>>
+        <a href="{% url 'loja:editar_user' %}" class="btn ">Editar Utilizador</a>
     </div>
 </div>
 
