Edit Product and User

--- a/Projeto/Merch_ISCTE/loja/templates/loja/criar_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/criar_produto.html
@@ -26,20 +26,20 @@ Criar Produto
     <form action="{% url 'loja:novo_produto' categoria.id %}" enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <div class="mb-3">
-          <label for="categoria_nome" class="form-label">Nome</label>
+          <label for="produto_nome" class="form-label">Nome</label>
           <input type="text" class="form-control" id="produto_nome" name="produto_nome" required="required">
         </div>
         <div class="mb-3">
-            <label for="categoria_nome" class="form-label">Descrição</label>
+            <label for="produto_texto" class="form-label">Descrição</label>
             <input type="text" class="form-control" id="produto_texto" name="produto_texto" required="required">
           </div>
           <div class="mb-3">
-            <label for="preco_data" class="form-label">Descrição</label>
+            <label for="preco_data" class="form-label">Preço</label>
             <input type="number" class="form-control" id="preco_data" name="preco_data" min="0.01" step="0.01" required="required">
           </div>
           <div class="mb-3">
-            <label for="myfile" class="form-label">Inserir imagem</label>
-            <input class="form-control" type="file" id="produto_file" required="required">
+            <label for="produto_file" class="form-label">Inserir imagem</label>
+            <input class="form-control" type="file" id="produto_file" name="produto_file">
           </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
