--- a/Projeto/Merch_ISCTE/loja/templates/loja/editar_user.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/editar_user.html
@@ -1,12 +1,12 @@
 {% extends "loja/index.html" %}
 
 {% block title %}
-    Editar Utilizador
+    Edit User
 {% endblock %}
 
 {% block blocobody %}
 
-<div class="container-md mx-auto my-5"><h1 class="text-center">Editar Utilizador</h1></div>
+<div class="container-md mx-auto my-5"><h1 class="text-center">Edit User</h1></div>
 {% load static %}
 
 <div class="container-md m-5 w-50 mx-auto">
@@ -25,11 +25,11 @@
           <input type="password" class="form-control" id="pass" name="pass">
         </div>
         <div class="mb-3">
-            <label for="curso" class="form-label">Curso</label>
+            <label for="curso" class="form-label">Curse</label>
             <input type="text" class="form-control" id="curso" name="curso" value="{{ request.user.cliente.curso }}">
           </div>
           <div class="mb-3">
-            <label for="myfile" class="form-label">Inserir foto</label>
+            <label for="myfile" class="form-label">Profile picture</label>
             <input class="form-control" type="file" id="myfile" name="myfile">
           </div>
         <button type="submit" class="btn btn-primary">Submit</button>
