--- a/Projeto/Merch_ISCTE/loja/templates/loja/perfil.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/perfil.html
@@ -1,7 +1,7 @@
 {% extends "loja/index.html" %}
 
 {% block title %}
-Perfil
+Profile
 {% endblock %}
 
 {% block blocobody %}
@@ -12,12 +12,12 @@ Perfil
 <div class="col-md">
     <div class="row d-flex justify-content-center m-5"><img src="{{ request.user.cliente.foto }}" class="rounded-circle " style="width: 15%;" ></div>
     <div class="row d-flex justify-content-center ">Email: {{ request.user.cliente.user.email}} </div>
-    <div class="row d-flex justify-content-center ">Curso: {{ request.user.cliente.curso }}</div>
+    <div class="row d-flex justify-content-center ">Curse: {{ request.user.cliente.curso }}</div>
     <div class="row d-flex justify-content-center ">Date Joined: {{ request.user.date_joined}}</div>
     <div class="row d-flex justify-content-center ">Last Login: {{ request.user.last_login}}</div>
     <br>
     <div class="d-flex justify-content-center ">
-        <a href="{% url 'loja:editar_user' %}" class="btn ">Editar Utilizador</a>
+        <a href="{% url 'loja:editar_user' %}" class="btn ">Edit User</a>
     </div>
 </div>
 
