--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -199,7 +199,7 @@
 -->
 
 {% block blocofooter %}
-<div class="container">
+<div class="container-fluid">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="{% url 'loja:index' %}" class="nav-link px-2 text-muted">Home</a></li>
