--- a/Projeto/Merch_ISCTE/loja/templates/loja/editar_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/editar_produto.html
@@ -25,7 +25,7 @@ Edit Product
             <input type="number" class="form-control" id="preco_data" name="preco_data" min="0.01" step="0.01" value="{{ produto.preco_data }}" required="required">
         </div>
         <div class="mb-3">
-            <label for="categoria_select">Categorie:</label>
+            <label for="categoria_select">Category:</label>
                 <select id="categoria_select" name="categoria_select" value="{{ categoria.categoria_nome }}">
                     {% if lista_categoria %}
                     <option value="{{ categoria.id }}">{{ categoria.categoria_nome }}</option>
