--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'loja:home' %}">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'loja:index' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'loja:index' %}">Products</a>
@@ -45,8 +45,11 @@
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                 </li>
-
-
+                <form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
+                    {% csrf_token %}
+                    <input class="form-control me-2" id="produto_procura" name="produto_procura" type="Search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
             </ul>
             <ul class="navbar-nav inline my-2 my-lg-0">
                 {% if not request.user.is_authenticated %}
@@ -74,7 +77,6 @@
                 </li>
                 <a class="btn btn-outline-success" href="{% url 'loja:registaruser' %}" type="submit">Register</a>
                 {% else %}
-                {% if not request.user.is_superuser %}
                 <li class="nav-item">
                     <a href="{% url 'loja:carrinho' %}" class="btn ">
                         <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
@@ -83,7 +85,6 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'loja:perfil' %}">Profile</a>
                 </li>
-                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'loja:logoutview' %}">Logout</a>
                 </li>
@@ -94,16 +95,9 @@
     </div>
 </nav>
 
-{% block search %}
-<form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
-    {% csrf_token %}
-    <input class="form-control me-2" id="produto_procura" name="produto_procura" type="Search" placeholder="Search"
-           aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
-</form>
-{% endblock %}
 {% block blocobody %}
 <div class="container-fluid d-md-flex align-items-stretch">
+
     <div id="content" class="p-4 p-md-5 pt-5">
         <p>All Products</p>
         {% if lista_produto %}
@@ -173,17 +167,17 @@
                 {% endfor %}
                 {% if request.user.is_superuser %}
                 <li>
-                    <a href="criar_categoria">Create new categorie</a>
+                    <a href="criar_categoria">Create new category</a>
                 </li>
                 {% endif %}
             </ul>
             {% else %}
             <p>There are no categories</p>
             {% if request.user.is_superuser %}
-            <li>
-                <a href="criar_categoria">Create new categorie</a>
-            </li>
-            {% endif %}
+                <li>
+                    <a href="criar_categoria">Create new category</a>
+                </li>
+                {% endif %}
             {% endif %}
         </div>
     </nav>
@@ -209,12 +203,9 @@
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="{% url 'loja:index' %}" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a target="_blank" href="https://www.iscte-iul.pt/" class="nav-link px-2 text-muted">Iscte</a>
-            </li>
-            <li class="nav-item"><a target="_blank" href="https://fenix.iscte-iul.pt" class="nav-link px-2 text-muted">Fénix</a>
-            </li>
-            <li class="nav-item"><a target="_blank" href="https://moodle.iscte-iul.pt" class="nav-link px-2 text-muted">Moodle</a>
-            </li>
+            <li class="nav-item"><a target="_blank" href="https://www.iscte-iul.pt/" class="nav-link px-2 text-muted">Iscte</a></li>
+            <li class="nav-item"><a target="_blank" href="https://fenix.iscte-iul.pt" class="nav-link px-2 text-muted">Fénix</a></li>
+            <li class="nav-item"><a target="_blank" href="https://moodle.iscte-iul.pt" class="nav-link px-2 text-muted">Moodle</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Sobre</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Merch@ISCTE, Inc</p>
