--- a/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_categoria.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_categoria.html
@@ -78,6 +78,7 @@ Category
             <p>There are no products available.</p>
             {% endif %}
             {% endif %}
+            <a href="{% url 'loja:apagar_categoria' categoria.id %}">Delete Category</a>
         </div>
         {% if request.user.is_superuser %}
         <a href="{% url 'loja:apagar_categoria' categoria.id %}">Delete category</a>
