--- a/Projeto/Merch_ISCTE/loja/templates/loja/registaruser.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/registaruser.html
@@ -25,7 +25,7 @@
           <input type="password" class="form-control" id="pass" name="pass">
         </div>
         <div class="mb-3">
-            <label for="curso" class="form-label">Curse</label>
+            <label for="curso" class="form-label">Course</label>
             <input type="text" class="form-control" id="curso" name="curso">
           </div>
           <div class="mb-3">
