--- a/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
@@ -4,12 +4,17 @@
 Lista
 {% endblock %}
 
+{% block search %}
+{% endblock %}
+
 {% block blocobody %}
 
 
 {% if error_message %}
 <p><strong>{{ error_message }}</strong></p>
 {% endif %}
+
+
 
 <form action="{% url 'loja:adicionar_carrinho' produto.id %}" enctype="multipart/form-data" method="post">
     {% csrf_token %}
