--- a/Projeto/Merch_ISCTE/loja/templates/loja/criar_categoria.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/criar_categoria.html
@@ -4,6 +4,9 @@
 Create Categorie
 {% endblock %}
 
+{% block search %}
+{% endblock %}
+
 {% block blocobody %}
 <div class="container-md mx-auto my-5"><h1 class="text-center">Create Categorie</h1></div>
 <div class="container-md m-5 w-50 mx-auto">
