--- a/Projeto/Merch_ISCTE/loja/templates/loja/criar_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/criar_produto.html
@@ -4,6 +4,9 @@
 Create Product
 {% endblock %}
 
+{% block search %}
+{% endblock %}
+
 {% block blocobody %}
 
 <div class="container-md mx-auto my-5"><h1 class="text-center">Create Product</h1></div>
