--- a/Projeto/Merch_ISCTE/loja/templates/loja/editar_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/editar_produto.html
@@ -4,6 +4,9 @@
 Edit Product
 {% endblock %}
 
+{% block search %}
+{% endblock %}
+
 {% block blocobody %}
 <div class="container-md mx-auto my-5"><h1 class="text-center">Edit Product</h1></div>
 <div class="container-md m-5 w-50 mx-auto">
