--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'loja:index' %}">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'loja:home' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'loja:index' %}">Products</a>
@@ -45,11 +45,8 @@
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                 </li>
-                <form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
-                    {% csrf_token %}
-                    <input class="form-control me-2" id="produto_procura" name="produto_procura" type="Search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+
+
             </ul>
             <ul class="navbar-nav inline my-2 my-lg-0">
                 {% if not request.user.is_authenticated %}
@@ -77,6 +74,7 @@
                 </li>
                 <a class="btn btn-outline-success" href="{% url 'loja:registaruser' %}" type="submit">Register</a>
                 {% else %}
+                {% if not request.user.is_superuser %}
                 <li class="nav-item">
                     <a href="{% url 'loja:carrinho' %}" class="btn ">
                         <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
@@ -85,6 +83,7 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'loja:perfil' %}">Profile</a>
                 </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'loja:logoutview' %}">Logout</a>
                 </li>
@@ -95,9 +94,16 @@
     </div>
 </nav>
 
+{% block search %}
+<form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
+    {% csrf_token %}
+    <input class="form-control me-2" id="produto_procura" name="produto_procura" type="Search" placeholder="Search"
+           aria-label="Search">
+    <button class="btn btn-outline-success" type="submit">Search</button>
+</form>
+{% endblock %}
 {% block blocobody %}
 <div class="container-fluid d-md-flex align-items-stretch">
-
     <div id="content" class="p-4 p-md-5 pt-5">
         <p>All Products</p>
         {% if lista_produto %}
