--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    {% load static %}
+    <link href="{% static 'loja/css/style.css' %}" rel="stylesheet" type="text/css"/>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -122,30 +125,9 @@
                     <a href="{% url 'loja:adicionar_carrinho' produto.id %}" class="btn ">
                         <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
                     </a>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#staticBackdrop">
+                    <a href="{% url 'loja:detalhe_produto' produto.id %}" type="button" class="btn btn-primary">
                         Product Details
-                    </button>
-                    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
-                         tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="staticBackdropLabel">{{ produto.produto_nome }}</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    ...
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
-                                    </button>
-                                    <button type="button" class="btn btn-primary">Understood</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    </a>
                     {% if request.user.is_superuser %}
                     <a href="{% url 'loja:apagar_produto' produto.id %}">Delete Product</a>
                     <a href="{% url 'loja:editar_produto' produto.id %}">Edit Product</a>
@@ -188,8 +170,8 @@
         </div>
     </nav>
 </div>
-
 {% endblock %}
+
 
 <!-- Optional JavaScript; choose one of the two! -->
 
@@ -208,7 +190,7 @@
 <div class="container-fluid">
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="{% url 'loja:index' %}" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="{% url 'loja:home' %}" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a target="_blank" href="https://www.iscte-iul.pt/" class="nav-link px-2 text-muted">Iscte</a></li>
             <li class="nav-item"><a target="_blank" href="https://fenix.iscte-iul.pt" class="nav-link px-2 text-muted">Fénix</a></li>
             <li class="nav-item"><a target="_blank" href="https://moodle.iscte-iul.pt" class="nav-link px-2 text-muted">Moodle</a></li>
