--- a/Projeto/Merch_ISCTE/loja/templates/loja/carrinho.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/carrinho.html
@@ -7,12 +7,7 @@ Shopping Cart
 {% endblock %}
 
 {% block blocobody %}
-<script type="text/javascript">
-    var counter = 1;
-    function increment(){
-        counter++;
-       }
-</script>
+
 <div class="container-md mx-auto my-5"><h1 class="text-center">Shopping Cart</h1></div>
 {% if lista_carrinho %}
 {% for produto in lista_carrinho %}
@@ -30,8 +25,16 @@ Shopping Cart
                 </div>
                 <div class="col">
                     <ul class="pagination al justify-content-center">
-                        <li class="page-item"><a class="page-link" onclick="increment()" href="{% url 'loja:adicionar_produto' produto.id %}">+</a></li>
-                        <li class="page-item"></li>
+                        <li class="page-item"><a class="page-link" href="{% url 'loja:adicionar_produto' produto.id %}">+</a></li>
+                        <li class="page-item">
+                            <a class="page-link">
+                            {% for key, value in lista_carrinho_dict.items %}
+                                {% if key|floatformat:"0" == produto.id|floatformat:"0" %}
+                                    {{ value }}
+                                {% endif %}
+                            {% endfor %}
+                            </a>
+                        </li>
                         <li class="page-item"><a class="page-link" href="{% url 'loja:remover_produto' produto.id %}">-</a></li>
                       </ul>
                 </div>
