New default images

--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -194,7 +194,7 @@
             <li class="nav-item"><a target="_blank" href="https://www.iscte-iul.pt/" class="nav-link px-2 text-muted">Iscte</a></li>
             <li class="nav-item"><a target="_blank" href="https://fenix.iscte-iul.pt" class="nav-link px-2 text-muted">Fénix</a></li>
             <li class="nav-item"><a target="_blank" href="https://moodle.iscte-iul.pt" class="nav-link px-2 text-muted">Moodle</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Sobre</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
         </ul>
         <p class="text-center text-muted">© 2022 Merch@ISCTE, Inc</p>
     </footer>
