--- a/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_categoria.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_categoria.html
@@ -15,7 +15,7 @@ Category
         <div class="row justify-content-center" style="margin-left:0px;margin-right:0px;">
             {% if request.user.is_superuser %}
             <div class="card" style="width: 18rem;">
-                <img src="/static/media/computer.png" class="card-img-top" alt="...">
+                <img src="/static/media/addProduct.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Product Name</h5>
                 </div>
